<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sadostrich.nomansskyjournal.Activities.RegistrationActivity">

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/et_register_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_username"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_register_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_email_address"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_register_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_password1"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tv_register_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_password2"
        android:layout_marginTop="@dimen/d8"
        android:gravity="center"
        android:text="@string/registration_terms"/>

    <CheckBox
        android:id="@+id/cb_register_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_register_terms"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/register"
        android:backgroundTint="@color/accent"
        android:textColor="@android:color/white"
        android:onClick="registerTheUser"/>

</RelativeLayout>
