<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_purple"
    android:padding="@dimen/d16">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:hint="@string/name"
        android:inputType="textCapCharacters|textMultiLine"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <!-- TODO: Figure out how to display infinite amount of screenshots the user can add -->

    <EditText
        android:id="@+id/et_video_evidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:backgroundTint="@android:color/white"
        android:hint="@string/paste_youtube_url"
        android:inputType="textMultiLine"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_video_evidence"
        android:backgroundTint="@android:color/white"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:layout_marginBottom="@dimen/d16"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/et_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_description"
        android:backgroundTint="@android:color/white"
        android:hint="@string/tags"
        android:textAllCaps="true"
        android:layout_toStartOf="@+id/btn_add_tag"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/d8"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/btn_add_tag"
        android:layout_width="@dimen/d32"
        android:layout_height="@dimen/d32"
        android:background="@drawable/plus"
        android:layout_below="@+id/et_description"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tv_tag_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_tags"
        android:gravity="start"
        android:text="@string/tag_total"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_show_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_tags"
        android:gravity="end"
        android:text="@string/show_tags"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_next_add_discovery"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d48"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/next" />

</RelativeLayout>