<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:app="http://schemas.android.com/apk/res-auto"
			 android:paddingBottom="8dp"
			 android:paddingLeft="8dp"
			 android:paddingRight="8dp">

	<android.support.v7.widget.CardView
		android:id="@+id/card_cardview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:cardBackgroundColor="@android:color/background_light">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<ImageView
				android:id="@+id/img_discovery_grid_image"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>

			<TextView
				android:id="@+id/tv_discovery_grid_type"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:background="@color/star_yellow"
				android:padding="@dimen/d4"
				android:text="@string/star"
				android:textAllCaps="true"
				android:textColor="@color/primary_light"/>

			<TextView
				android:id="@+id/tv_discovery_grid_comment_count"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_alignParentTop="true"
				android:background="@color/accent"
				android:padding="@dimen/d4"
				android:text="@string/number_placeholder"
				android:textColor="@color/primary_light"/>

			<FrameLayout
				android:id="@+id/discovery_grid_bottom_bar"
				android:layout_width="match_parent"
				android:layout_height="@dimen/d64"
				android:layout_alignParentBottom="true"
				android:background="@color/primary_dark"
				android:padding="@dimen/d16">

				<TextView
					android:id="@+id/tv_discovery_grid_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top|start"
					android:text="@string/animal"
					android:textAllCaps="true"
					android:textColor="@color/accent"
					android:textSize="@dimen/ts16"/>

				<TextView
					android:id="@+id/tv_discovery_grid_username"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom|start"
					android:text="@string/by_username"
					android:textColor="@color/primary_light"/>

				<TextView
					android:id="@+id/tv_discovery_grid_time_ago"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom|end"
					android:text="@string/time_ago"
					android:textColor="@color/primary_light"/>
			</FrameLayout>

		</RelativeLayout>
	</android.support.v7.widget.CardView>
</FrameLayout>