<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/layout_root_add_comment_dialog"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<EditText
		android:id="@+id/et_comment"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/toolbar_light_trans"
		android:gravity="start|top"
		android:hint="@string/hint_enter_comment"
		android:inputType="text|textMultiLine"
		android:isScrollContainer="true"
		android:lines="10"
		android:maxLines="50"
		android:padding="@dimen/d8"
		android:textColor="@color/primary_dark"
		android:textSize="@dimen/ts16"/>

	<Button
		android:id="@+id/btn_post"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/et_comment"
		android:text="@string/post"
		android:textColor="@color/primary"/>

	<Button
		android:id="@+id/btn_cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/btn_post"
		android:layout_marginEnd="@dimen/d16"
		android:layout_toStartOf="@+id/btn_post"
		android:text="@string/cancel"
		android:textColor="@color/primary"/>
</RelativeLayout>