<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/station_green"
    android:padding="@dimen/d16">

    <LinearLayout
        android:id="@+id/layout_type_planet_count_spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d16"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/d4"
                android:text="@string/label_size"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts16" />

            <Spinner
                android:id="@+id/spinner_station_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/d8"
                android:backgroundTint="@color/station_green_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/d4"
                android:text="@string/label_life"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts16" />

            <Spinner
                android:id="@+id/spinner_station_life"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/d8"
                android:layout_weight="1"
                android:backgroundTint="@color/station_green_dark" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_discovery"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d48"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/station_green_dark"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btn_previous_add_discovery"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d48"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/station_green_dark"
        android:text="@string/previous" />

</RelativeLayout>